--- a/hooks/install
+++ b/hooks/install
@@ -2,6 +2,6 @@
 
 set -eu # -x for verbose logging to ensemble debug-log
 
-ensemble-log "Installing rails, apache, passenger"
-apt-get -y install -qq rails libapache2-mod-passenger
+ensemble-log "Installing ruby, apache, passenger"
+apt-get -y install -qq ruby rake libapache2-mod-passenger
 
