--- a/hooks/install
+++ b/hooks/install
@@ -4,29 +4,26 @@ set -eu # -x for verbose logging to ensemble debug-log
 
 ensemble-log "Installing ruby, apache, passenger"
 apt-get -y install -qq ruby ruby-dev rake libapache2-mod-passenger
-apt-get -y install -qq libmysqlclient16 libmysqlclient16-dev 
-apt-get -y install -qq libpgsql-ruby 
+apt-get -y install -qq libsqlite3-dev libsqlite3-ruby
 
-install_dir="/opt"
+install_root=`config-get install_root`
 app_name=`config-get app_name`
-app_repo_url=`config-get app_repo_url`
-app_repo_branch=`config-get app_repo_branch`
-app_repo_type=`config-get app_repo_type`
-app_dir="$install_dir/$app_name"
+app_dir="$install_root/$app_name"
+repo_url=`config-get repo_url`
+repo_branch=`config-get repo_branch`
+repo_type=`config-get repo_type`
 pull_git_app() {
   apt-get -y install -qq git-core
-  git clone http://github.com/mmm/testrails.git -b $app_repo_branch $app_dir
-  sed -i 's/sqlite3/mysql/' Gemfile #MMM!!!
+  umask 022
+  git clone $repo_url -b $repo_branch $app_dir
 }
 pull_bzr_app() {
   apt-get -y install -qq git-core
-  bzr branch $app_repo_url -b $app_repo_branch $app_dir
-  sed -i 's/sqlite3/mysql/' Gemfile #MMM!!!
+  umask 022
+  bzr branch $repo_url -b $repo_branch $app_dir
 }
 install_app() {
   ensemble-log "Installing your rails app into $app_dir"
-  cd $install_dir
-  umask 022
   pull_git_app
   chown -Rf ubuntu.ubuntu $app_dir
 }
